fix page break on every line

--- a/src/resume.sass
+++ b/src/resume.sass
@@ -62,9 +62,7 @@ body
   display: inline-flex
   margin-left: 2px
   color: $TitleColor
-  break-after: left
   
-
 .o-token-wrapper
   display: inline-flex
   margin-bottom: 3px
